<resources>
    <string name="app_name">JeuQuiz</string>
    <string name="Nom_Quiz">LilleameQuiz</string>
    <string name="ButtonStart">Start</string>
    <string name="Player1">Player1</string>
    <string name="Player2">Player2</string>
    <string name="Go">Go</string>
    <string name="elevated_button">Elevated button</string>
    <string name="Rejouer">Rejouer</string>
    <string name="Menu">Menu</string>
    <string name="MenuEffacer">Effacer la saisie</string>
    <string name="MenuParamètre">Paramètre</string>
    <string name="MenuQuitter">About</string>
</resources>